# nbody-parareal

./: .gitignore  CMakeLists.txt  LOG.md  README.md  configs.f90.in  main.f90
examples/: parareal_iv.json  parareal_random.json  sequential_iv.json  sequential_random.json
src/: types.F90  utils.f90
src/barneshut/: octree.f90
src/forces/: forces.f90
src/integrators/: CMakeLists.txt  integrator.f90  integrators.f90.in
src/integrators/methods/symplectic/: symp_euler.f90  verlet.f90
src/libs/: json_utils_mod.f90
src/simulation/: parareal_simulator.f90  sequential_simulator.f90
